# ToxFam

./: .gitignore  README.md  config.py  config.yaml  dataset.py  further_preprocessing.ipynb  general_plotting.ipynb  generate_embeds.py  main.py  model.ipynb  model.py  preprocessing.ipynb  process_toxin.ipynb  prott5_embedder.py  pyproject.toml  structural_analysis.ipynb  training.py  upar_like.ipynb  visualization.py
benchmark/: benchmark.ipynb
data/: SD1_Dataset_and_information.csv  model_input.csv  scolop.csv  scolop.fasta  scolop.json  style.txt  toxins.fasta  toxins.tsv  toxins1.tsv  toxins_no_na.fasta  toxins_no_na.tsv  toxins_no_na_scolop.fasta  toxins_regex.csv  toxins_test.fasta  toxins_train.fasta  toxins_val.fasta  upar.csv  upar.fasta  upar.h5  upar_scolop.json
data/raw/: tox.fasta  tox.tsv
model/: config.py  config.yaml  dataset.py  main.py  model_architecture.py  training.py  utils.py
model/model_output/: Protein_families_chi_square.json  Protein_families_distribution.json  best_model.pt  model_output.txt  overall_split_stats.json  test_metrics.json  validation_metrics.json
model_output/: best_model.pt  classification_report.txt  metrics.json  model_output.txt  overall_split_stats.json  test_metrics.json  validation_metrics.json
model_output/cluster_id/: Cluster_ID_chi_square.json  Cluster_ID_distribution.json  best_model.pt  model_output.txt  split_stats.json  test_metrics.json  validation_metrics.json
model_output/protein_category/: best_model.pt  model_output.txt  protein_category_chi_square.json  protein_category_distribution.json  split_stats.json  test_metrics.json  validation_metrics.json
model_output/protein_families/: Protein_families_chi_square.json  Protein_families_distribution.json  best_model.pt  model_output.txt  split_stats.json  test_metrics.json  validation_metrics.json
notebooks/: 0_preprocessing.ipynb  further_preprocessing.ipynb  general_plotting.ipynb  nontox_sp.ipynb  preprocessing.ipynb  process_toxin.ipynb  structural_analysis.ipynb  upar_like.ipynb
utils/: generate_embeds.py  preprocessing.ipynb
