[project]
name = "toxfam"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.5.0",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "annoy==1.17.3",
    "anyio==4.8.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==25.1.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "biopython==1.85",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "bottleneck==1.4.2",
    "brotli>=1.1.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colour==0.1.5",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cryptography==43.0.3",
    "cycler==0.11.0",
    "dash==2.18.2",
    "dash-bio==1.0.2",
    "dash-bootstrap-components==1.7.1",
    "dash-core-components==2.0.0",
    "dash-daq==0.5.0",
    "dash-html-components==2.0.0",
    "dash-iconify==0.1.2",
    "dash-table==5.0.0",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "flask==3.0.3",
    "fonttools==4.55.3",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2025.2.0",
    "gdown==5.2.0",
    "geoparse==2.0.4",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-api-core==2.24.2",
    "google-api-python-client==2.165.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.69.2",
    "h11==0.16.0",
    "h2==4.2.0",
    "h5py==3.13.0",
    "hdbscan==0.8.40",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "huggingface-hub==0.29.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "iterative-stratification==0.1.9",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "kaleido==0.2.1",
    "kiwisolver==1.4.8",
    "lightning==2.5.0.post0",
    "lightning-utilities==0.14.0",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "matplotlib-venn==1.1.2",
    "mistune==3.1.2",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "narwhals==1.28.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numba==0.61.0",
    "numexpr==2.10.1",
    "numpy==2.1.3",
    "oauth2client==4.1.3",
    "overrides==7.7.0",
    "packaging==24.2",
    "pacmap==0.8.0",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parmed==4.3.0",
    "parso==0.8.4",
    "periodictable==2.0.2",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "pip==25.0",
    "platformdirs==4.3.6",
    "plotly==6.0.0",
    "polars==1.23.0",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "proto-plus==1.26.1",
    "protobuf==6.30.1",
    "protspace[frontend]==1.1.5",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydrive2==1.21.3",
    "pyfaidx==0.8.1.3",
    "pygments==2.19.1",
    "pymmseqs==1.0.3",
    "pynndescent==0.5.13",
    "pyopenssl==24.2.1",
    "pyparsing==3.2.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pytoml==0.1.21",
    "pytorch-lightning==2.5.0.post0",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "retrying==1.3.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scikit-multilearn==0.2.0",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.30.0",
    "setproctitle==1.3.6",
    "setuptools==72.1.0",
    "six==1.16.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "taxopy==0.14.0",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.0",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchmetrics==1.6.2",
    "torchvision==0.22.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.49.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "tzdata>=2025.2",
    "umap-learn==0.5.7",
    "unicodedata2==15.1.0",
    "upsetplot==0.9.0",
    "uri-template==1.3.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "uv==0.7.13",
    "wandb==0.20.1",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.0.6",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.13",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "zstd==1.5.7",
]
