[project]
name = "toxfam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "iterative-stratification>=0.1.9",
    "jupyter>=1.1.1",
    "protspace[frontend]>=2.1.2",
    "pymmseqs>=1.0.4",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
]
